[package]
name = "argon2id-wasm"
version = "0.1.0"
description = "Argon2id WASM"
edition = "2021"
license = "MIT"
repository = "https://github.com/Rabbit-Company/Argon2id-WASM"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
argon2 = "0.5.3"
wasm-bindgen = "0.2.93"